--- a/style.css
+++ b/style.css
@@ -63,13 +63,17 @@ body *{
     border-radius: 50%;
     position: absolute;
     top: 50%;
+    left: 0;
     z-index: 1;
     transform: translateY(-50%);
+    animation: slide-back 0.2s;
 }
 
 .light #switch button{
-    right: 0;
-    left: initial;  
+  animation: slide-in 0.4s forwards; 
+}
+#switch button:hover{
+    outline: 8px solid var(--highlight-color);
 }
 #switch span{
     display: block;
@@ -139,5 +143,22 @@ footer{
     }
     .light {
         --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+}
+
+@keyframes slide-in{
+    from {
+        left: 0;
+    }
+    to{
+        left: 50%;
+    }
+}
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
     }
 }
